2004-05-17  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/sp-item.cpp: Cleanup: greater conformance to CodingStyle.

	* acinclude.m4: Remove.

2004-05-16  Carl Hetherington  <inkscape@carlh.net>

	* src/extension/internal/svg.cpp:
	Throw an exception if sp_repr_save_file fails.  This should close
	bug 948921.

2004-05-16  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/check-header-compile.in: New script.
	* configure.in: Add it to list of files for substitution.

	* src/star-context.cpp: Minor cleanups, and use g_strdup_printf instead
	  of fixed-size buffer for translated string.

	* src/selection-chemistry.cpp: Use NR::Rect bounds() method instead of
	  old bounds(NRRect*).

	* src/document.cpp (sp_document_create): 
	* src/preferences-skeleton.h:
	  Use INKSCAPE_VERSION from inkscape_version.h instead of VERSION.

	* src/libnr/nr-rotate-test.cpp: Use new rotate_equalp function. 

	* src/libnr/nr-translate-ops.h (operator-): New function.

	* src/select-context.cpp:
	* src/selection-chemistry.cpp:
	* src/xml/repr.h:
	* src/sp-defs.h:
	  Cleanup: greater conformance to CodingStyle.

	* src/libnr/nr-macros.h: Don't #include nr-matrix.h, nr-rect.h.

	* src/arc-context.h, src/desktop-affine.h, src/dir-util.h,
	  src/draw-context.h, src/dyna-draw-context.h, src/help.h,
	  src/knotholder.h, src/prefs-utils.h, src/select-toolbar.h,
	  src/sp-clippath.h, src/sp-mask.h, src/sp-pattern.h, src/sp-use.h,
	  src/text-context.h, src/toolbox.h, src/tools-switch.h,
	  src/dialogs/dialog-events.h, src/dialogs/sp-attribute-widget.h,
	  src/display/sp-canvas.h, src/helper/gnome-utils.h,
	  src/helper/png-write.h, src/helper/stock-items.h, src/inkjar/jar.h,
	  src/libnr/nr-matrix.cpp, src/libnr/nr-point-l.h,
	  src/svg/stringstream.h, src/svg/svg-affine.cpp,
	  src/widgets/gradient-selector.h, src/widgets/paint-selector.h,
	  src/widgets/spinbutton-events.h, src/widgets/spw-utilities.h,
	  src/xml/repr-action.h: