@@ -937,106 +937,6 @@ sp_item_view_list_remove(SPItemView *list, SPItemView *view)
     return list;
 }
 
-/* Convert distances into SVG units */
-
-static const SPUnit *absolute = NULL;
-static const SPUnit *percent = NULL;
-static const SPUnit *em = NULL;
-static const SPUnit *ex = NULL;
-
-gdouble
-sp_item_distance_to_svg_viewport(SPItem *item, gdouble distance, SPUnit const *unit)
-{
-    /* TODO: This function is identical to sp_item_distance_to_svg_bbox (other than a warning
-     * for percentages).  Check that there's no copy&paste bug, and consider merging the two
-     * functions. */
-    g_return_val_if_fail(item != NULL, distance);
-    g_return_val_if_fail(SP_IS_ITEM(item), distance);
-    g_return_val_if_fail(unit != NULL, distance);
-
-    NRMatrix i2doc;
-    sp_item_i2doc_affine(item, &i2doc);
-    double const u2a = M_SQRT1_2 * hypot(i2doc.c[0] + i2doc.c[2],    // dx
-                                         i2doc.c[1] + i2doc.c[3]);   // dy
-    if (unit->base == SP_UNIT_DIMENSIONLESS) {
-        /* Check for percentage */
-        if (!percent) percent = sp_unit_get_by_abbreviation("%");
-        if (unit == percent) {
-            /* Percentage of viewport */
-            /* fixme: full viewport support (Lauris) */
-            return ( 0.01 * distance
-                     * M_SQRT1_2 * hypot(sp_document_width(SP_OBJECT_DOCUMENT(item)),
-                                         sp_document_height(SP_OBJECT_DOCUMENT(item))) );
-        } else {
-            /* Treat as userspace */
-            return distance * unit->unittobase * u2a;
-        }
-    } else if (unit->base == SP_UNIT_VOLATILE) {
-        /* Either em or ex */
-        /* fixme: This need real care */
-        if (!em) em = sp_unit_get_by_abbreviation("em");
-        if (!ex) ex = sp_unit_get_by_abbreviation("ex");
-        if (unit == em) {
-            return distance * 12.0;
-        } else {
-            return distance * 10.0;
-        }
-    } else {
-        /* Everything else can be done in one step */
-        /* We just know, that pt == 1.25 * px */
-        if (!absolute) absolute = sp_unit_get_identity(SP_UNIT_ABSOLUTE);
-        sp_convert_distance_full(&distance, unit, absolute, u2a, 0.8);
-        return distance;
-    }
-}
-
-gdouble
-sp_item_distance_to_svg_bbox(SPItem *item, gdouble distance, SPUnit const *unit)
-{
-    /* TODO: This function is identical to sp_item_distance_to_svg_viewport (other than a warning
-     * for percentages).  Check that there's no copy&paste bug, and consider merging the two
-     * functions. */
-    g_return_val_if_fail(item != NULL, distance);
-    g_return_val_if_fail(SP_IS_ITEM(item), distance);
-    g_return_val_if_fail(unit != NULL, distance);
-
-    NRMatrix i2doc;
-    sp_item_i2doc_affine(item, &i2doc);
-    double const u2a = M_SQRT1_2 * hypot(i2doc.c[0] + i2doc.c[2],    // dx
-                                         i2doc.c[1] + i2doc.c[3]);   // dy
-    if (unit->base == SP_UNIT_DIMENSIONLESS) {
-        /* Check for percentage */
-        if (!percent) percent = sp_unit_get_by_abbreviation("%");
-        if (unit == percent) {
-            /* Percentage of viewport */
-            /* fixme: full viewport support (Lauris) */
-            g_warning("file %s: line %d: Implement real item bbox percentage etc.", __FILE__, __LINE__);
-            return ( 0.01 * distance
-                     * M_SQRT1_2 * hypot(sp_document_width(SP_OBJECT_DOCUMENT(item)),
-                                         sp_document_height(SP_OBJECT_DOCUMENT(item))) );
-        } else {
-            /* Treat as userspace */
-            return distance * unit->unittobase * u2a;
-        }
-    } else if (unit->base == SP_UNIT_VOLATILE) {
-        /* Either em or ex */
-        /* fixme: This need real care */
-        if (!em) em = sp_unit_get_by_abbreviation("em");
-        if (!ex) ex = sp_unit_get_by_abbreviation("ex");
-        if (unit == em) {
-            return distance * 12.0;
-        } else {
-            return distance * 10.0;
-        }
-    } else {
-        /* Everything else can be done in one step */
-        /* We just know, that pt == 1.25 * px */
-        if (!absolute) absolute = sp_unit_get_identity(SP_UNIT_ABSOLUTE);
-        sp_convert_distance_full(&distance, unit, absolute, u2a, 0.8);
-        return distance;
-    }
-}
-
 /**
 Return the arenaitem corresponding to the given item in the display with the given key
  */
