@@ -191,11 +191,6 @@ void sp_item_set_i2d_affine(SPItem *item, NR::Matrix const &transform);
 
 NRMatrix *sp_item_dt2i_affine(SPItem const *item, SPDesktop *dt, NRMatrix *transform);
 
-/* Convert distances into SVG units */
-
-gdouble sp_item_distance_to_svg_viewport (SPItem *item, gdouble distance, const SPUnit *unit);
-gdouble sp_item_distance_to_svg_bbox (SPItem *item, gdouble distance, const SPUnit *unit);
-
-int sp_item_repr_compare_position (SPItem * first, SPItem * second);
+int sp_item_repr_compare_position(SPItem *first, SPItem *second);
 
 #endif
