@@ -1,5 +1,9 @@
 2004-05-17  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* src/sp-item.h, src/sp-item.cpp: Remove unused
+	  distance-conversion functions sp_item_distance_to_svg_bbox,
+	  sp_item_distance_to_svg_viewport.
+
 	* src/sp-item.cpp: Cleanup: greater conformance to CodingStyle.
 
 	* acinclude.m4: Remove.
